<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_recipes.AddRecipesFragment">

    <ScrollView
        android:id="@+id/recipe_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="470dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/item_text_input"
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_add_recipe_top"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_descr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                layout="@layout/item_text_input"
                android:id="@+id/text_input_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_type"
                app:layout_constraintTop_toBottomOf="@id/text_input_name" />

            <include
                layout="@layout/item_dropdown_input"
                android:id="@+id/text_input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/types"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_difficulty"
                app:layout_constraintTop_toBottomOf="@id/text_input_descr" />

            <include
                layout="@layout/item_dropdown_input"
                android:id="@+id/text_input_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/skillLevel"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_preptime"
                app:layout_constraintTop_toBottomOf="@id/text_input_type" />

            <include
                layout="@layout/item_time_input"
                android:id="@+id/text_input_preptime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_cooktime"
                app:layout_constraintTop_toBottomOf="@id/text_input_difficulty" />

            <include
                layout="@layout/item_time_input"
                android:id="@+id/text_input_cooktime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintBottom_toTopOf="@id/text_input_ingredients"
                app:layout_constraintTop_toBottomOf="@id/text_input_preptime" />

            <include
                layout="@layout/item_ingredients_input"
                android:id="@+id/text_input_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                android:layout_marginTop="@dimen/margin_item_top"
                app:layout_constraintBottom_toTopOf="@id/text_input_instructions"
                app:layout_constraintTop_toBottomOf="@id/text_input_cooktime" />

            <include
                layout="@layout/item_instruction_input"
                android:id="@+id/text_input_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_top"
                app:layout_constraintBottom_toTopOf="@id/text_input_images"
                app:layout_constraintTop_toBottomOf="@id/text_input_ingredients" />

            <include
                layout="@layout/item_image_input"
                android:id="@+id/text_input_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_top"
                android:layout_marginEnd="@dimen/margin_item_left_right"
                app:layout_constraintTop_toBottomOf="@id/text_input_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>