...
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ingredient_input_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ingredient_input_button"
        app:singleSelection="true"
        style="@style/Theme.MaterialComponents.Light.DarkActionBar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ingredient_input_inputfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_input_chipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ingredient_input_button"
        android:layout_marginStart="@dimen/margin_item_left_right"/>
...
