...
        android:id="@+id/instruction_input_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_left_margin_big"
        android:layout_marginEnd="@dimen/item_left_margin_big"
        app:layout_constraintTop_toBottomOf="@id/instruction_input_description"
        app:layout_constraintBottom_toTopOf="@id/instruction_input_inputfield"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/instruction_input_inputfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/instruction_input_listView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/instruction_input_button"
        android:layout_marginStart="@dimen/margin_item_left_right"/>

    <Button
        android:id="@+id/instruction_input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
