...
        app:layout_constraintBottom_toBottomOf="@id/recipe_image"
        android:layout_marginEnd="@dimen/margin_floating_button"
        android:layout_marginBottom="@dimen/margin_floating_button"
        />

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/recipe_image"
        app:layout_constraintStart_toStartOf="@id/recipe_image"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_title"
        android:padding="@dimen/margin_title"
        android:background="@drawable/scrim"
        android:text="Pizza"
        />

    <include
        layout="@layout/item_separator"
        android:id="@+id/recipe_separator"
        android:layout_height="wrap_content"
...
