<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_edit_recipe"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit_24px"
        android:title=""
        app:showAsAction="always" />
</menu>