<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipesFragment">

    <ListView
        android:id="@+id/list_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dp"
        android:divider="@null"
        app:layout_constraintTop_toTopOf="parent"
        />

    <include
        layout="@layout/item_floating_add_button"
        android:id="@+id/button_add_recipes"
        />

</androidx.constraintlayout.widget.ConstraintLayout>