<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_displayed_recipe"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="20dp"
        android:maxLines="3"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/image_displayed_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipe_play_button"
        tools:text="Pizza Margherita"/>

    <ImageButton
        android:id="@+id/recipe_play_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_play_circle_outline_black_24dp"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintStart_toEndOf="@id/recipe_title"
        app:layout_constraintTop_toTopOf="@id/recipe_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/recipe_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>